# dingbot

./: CMakeLists.txt  README.md  cmdline.cpp  cmdline.h  global.cpp  global.h  logger.cpp  logger.h  main.cpp
bot/: bot.cpp  bot.h
botapi/: apimodel.cpp  botapi.cpp  botapi.h
botserver/: botserver.cpp  botserver.h
plugin/: apimodel.h  plugin.cpp  plugin.h  pluginmodel.h
tool/: tool.cpp  tool.h
