cmake_minimum_required(VERSION 3.25)
project(dingbot)
message("thank for using dingbot.QQ group:603838409")
find_package(Boost COMPONENTS filesystem program_options)
add_executable(dingbot cmdline.cpp logger.cpp global.cpp tool/tool.cpp botserver/botserver.cpp bot/bot.cpp main.cpp)
target_link_libraries(dingbot ${Boost_FILESYSTEM_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY})